fix spacing error

--- a/src/pages/applyFreelancer/applyFreelancer.css
+++ b/src/pages/applyFreelancer/applyFreelancer.css
@@ -112,7 +112,7 @@
 .close-icon {
     color: #757575;
     cursor: pointer;
-    margin-top: 38px;
+    margin-top: 32px;
 }
 
 .add-icon {
